<resources>
    <string name="app_name">Ucell U-tolov</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="lang" translatable="false">Language</string>

    <string name="ru_lang" translatable="false">Русский</string>
    <string name="uz_lang" translatable="false">O\'zbek</string>
    <string name="en_lang" translatable="false">English</string>


    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="registration">Registration</string>
    <string name="activation_info">Код Активации будет отправлен в SMS сообщении. Убедитесь что ваше устройство может принимать их</string>
    <string name="history_all_transactions">Transactions</string>


    <!--pin-->
    <string name="pin_enter_pin">Enter OTP</string>
    <string name="pin_enter_pin1">Enter PIN</string>
    <string name="pin_enter_pin_again">Confirm PIN</string>
    <string name="pin_enter_wrong">Wrong PIN</string>
    <string name="pin_enter_pin_again_wrong">Wrong PIN, Please enter confirm PIN</string>
    <string name="pin_use_biometrics">Use biometrics</string>


    <!--menu-->
    <string name="main_navbar_bottom">Main Page</string>
    <string name="transfer_navbar_bottom">Transferes</string>
    <string name="payment_navbar_bottom">Payments</string>
    <string name="configuration_navbar_bottom">Configurations</string>


    <!--home-->
    <string name="home_balance">Overall Balance</string>
    <string name="home_u_point">Bonuses</string>
    <string name="home_cards">My Cards</string>
    <string name="home_support">Support</string>
    <string name="home_pay_mobile">Pay for mobile</string>
    <string name="home_request_pay">Request amount</string>
    <string name="home_pay_request">Make amount</string>
    <string name="home_last_transactions">Last transactions</string>
    <string name="home_balance_mobile">Mobile Balance</string>
    <string name="home_history_account">Account</string>
    <string name="home_history_amount">Amount</string>


    <!--card-->
    <string name="card_balance">Balance</string>
    <string name="card_cur">Sum</string>
    <string name="card_my_cards">My Cards</string>
    <string name="card_all">All</string>
    <string name="card_uzcard">Uzcard</string>
    <string name="card_humo">Humo</string>

    <!--card configuration-->
    <string name="card_config_title">Configure Card</string>
    <string name="card_config_card_name">Card Name</string>
    <string name="card_config_card_makemain">Make default</string>
    <string name="card_config_card_block">Block card</string>
    <string name="card_config_card_delete">Delete card</string>
    <string name="card_config_card_create">Save card</string>
    <string name="card_config_card_update">Update card</string>

    <!--carrier payment-->
    <string name="carrier_main">Pay mobile carrier</string>
    <string name="carrier_main_number">Number</string>
    <string name="carrier_main_amount">Amount</string>
    <string name="carrier_main_pay">Pay</string>

    <!--transfer-->
    <string name="transfer_perform_success">Transfer Performed Successfully</string>
    <string name="transfer_perform_faulty">Transfer FAULTY</string>

    <!-- configuration-->
    <string name="configuration_profile">Profile</string>
    <string name="configuration_security">Security</string>
    <string name="configuration_monitoring">Payment monitor</string>
    <string name="configuration_public_offer">Public Offer</string>
    <string name="configuration_night_theme">Night Theme</string>

    <!-- ucell subscriber-->
    <string name="ucell_subscriber_number_info">Number Info</string>
    <string name="ucell_subscriber_number">Number</string>
    <string name="ucell_subscriber_po">Primary Offer</string>
    <string name="ucell_subscriber_refill">Balance refill</string>
    <string name="ucell_subscriber_vbalance">Voice Balances</string>
    <string name="ucell_subscriber_vbalance_1">On-net calls</string>
    <string name="ucell_subscriber_vbalance_2">Bonus minutes(On-net)</string>
    <string name="ucell_subscriber_vbalance_3">Minutes within Uzbekistan according to the tariff plan</string>
    <string name="ucell_subscriber_databalance">Data Balances</string>
    <string name="ucell_subscriber_databalance_1">Daily/Weekly Data Balance</string>
    <string name="ucell_subscriber_databalance_2">Data Balance by tariff plan</string>
    <string name="ucell_subscriber_databalance_3">Monthly Data Balance</string>
    <string name="ucell_subscriber_databalance_4">Additional Data Balance</string>

    <!-- ucell articles -->
    <string name="article_main">Новости</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>