<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/main_navbar_bottom"/>

    <item
        android:id="@+id/merchantFragment"
        android:icon="@drawable/ic_payment"
        android:title="@string/payment_navbar_bottom"/>

    <item
        android:id="@+id/menuFragment"
        android:title=""/>




    <item
        android:id="@+id/transferFragment"
        android:icon="@drawable/ic_transfer"
        android:title="@string/transfer_navbar_bottom"/>

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_history"
        android:title="@string/configuration_navbar_bottom"/>
</menu>