<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vmodel"
            type="uz.rdu.ucell_utolov.modelviews.UcellSubscriberViewModel" />

        <variable
            name="main_model"
            type="uz.rdu.ucell_utolov.modelviews.MainViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBackGround">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="100dp">

            <TextView
                style="@style/UtolovTextHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:gravity="start"
                android:text="@string/ucell_subscriber_number_info" />

            <androidx.cardview.widget.CardView
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <TextView
                    style="@style/UtolovText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="start"
                    android:text="@string/ucell_subscriber_refill" />

                <TextView
                    style="@style/UtolovText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="+998931717736"
                    android:textSize="24sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/UtolovText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="start"
                        android:text="@string/ucell_subscriber_number" />

                    <TextView
                        style="@style/UtolovText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@{`+`+main_model.user.username}"
                        android:textSize="24sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        style="@style/UtolovText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="start"
                        android:text="@string/home_balance_mobile" />

                    <TextView
                        style="@style/UtolovText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@{main_model.balance}"
                        android:textSize="24sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        style="@style/UtolovText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="start"
                        android:text="@string/ucell_subscriber_po" />

                    <TextView
                        style="@style/UtolovText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@{main_model.ucell_profile.primaryOffer}"
                        android:textSize="24sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/UtolovTextHome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:drawableLeft="@drawable/ic_baseline_local_phone_24"
                        android:text="@string/ucell_subscriber_vbalance" />

                    <TextView
                        style="@style/UtolovText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="start"
                        android:text="@string/ucell_subscriber_vbalance_1" />
                    <TextView
                        style="@style/UtolovText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@{main_model.balances.voiceBalance1}"
                        android:textSize="24sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        style="@style/UtolovText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="start"
                        android:text="@string/ucell_subscriber_vbalance_2" />
                    <TextView
                        style="@style/UtolovText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@{main_model.balances.voiceBalance2}"
                        android:textSize="24sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:background="@android:color/darker_gray" />
                    <TextView
                        style="@style/UtolovText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="start"
                        android:text="@string/ucell_subscriber_vbalance_3" />
                    <TextView
                        style="@style/UtolovText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@{main_model.balances.voiceBalance3}"
                        android:textSize="24sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/UtolovTextHome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:drawableLeft="@drawable/ic_globe"
                        android:text="@string/ucell_subscriber_databalance" />

                    <TextView
                        style="@style/UtolovText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="start"
                        android:text="@string/ucell_subscriber_databalance_1" />
                    <TextView
                        style="@style/UtolovText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@{main_model.balances.dataBalance1}"
                        android:textSize="24sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        style="@style/UtolovText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="start"
                        android:text="@string/ucell_subscriber_databalance_2" />
                    <TextView
                        style="@style/UtolovText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@{main_model.balances.dataBalance2}"
                        android:textSize="24sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:background="@android:color/darker_gray" />
                    <TextView
                        style="@style/UtolovText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="start"
                        android:text="@string/ucell_subscriber_databalance_3" />
                    <TextView
                        style="@style/UtolovText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@{main_model.balances.dataBalance3}"
                        android:textSize="24sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        style="@style/UtolovText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="start"
                        android:text="@string/ucell_subscriber_databalance_4" />
                    <TextView
                        style="@style/UtolovText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@{main_model.balances.dataBalance4}"
                        android:textSize="24sp" />



                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</layout>